--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <nav class="top-nav">
                 <ul>
                     <li>
-                        <a href="#">Accueil</a>
+                        <a href="./index.html">Accueil</a>
                     </li>
                     <li>
-                        <a href="#">Favoris</a>
+                        <a href="./favoris.html">Favoris</a>
                     </li>
                     <li>
-                        <a href="#">Panier</a>
+                        <a href="./panier.html">Panier</a>
                     </li>
                     <li>
-                        <a href="#">Compte</a>
+                        <a href="./compte.html">Compte</a>
                     </li>
                     <li>
                         <a href="#" >
@@ -622,25 +622,25 @@
     <section class="bottom-navigation">
         <ul>
             <li class="bottom-navigation-item">
-                <a href="#" class="active">
+                <a href="./index.html" >
                     <span class="fa fa-home"></span>
                     <span class="nav-title">Accueil</span>
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="#">
+                <a href="./favoris.html">
                     <span class="fa fa-heart"></span>
                     <span class="nav-title">Favoris</span>
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="#">
+                <a href="./panier.html">
                     <span class="fa fa-shopping-cart"></span>
                     <span class="nav-title">Panier</span>
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="#">
+                <a href="./compte.html" class="active">
                     <span class="fa fa-user"></span>
                     <span class="nav-title">Compte</span>
                 </a>
