--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     <section class="bottom-navigation">
         <ul>
             <li class="bottom-navigation-item">
-                <a href="./index.html" >
+                <a href="./index.html" class="active" >
                     <span class="fa fa-home"></span>
                     <span class="nav-title">Accueil</span>
                 </a>
@@ -640,7 +640,7 @@
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="./compte.html" class="active">
+                <a href="./compte.html">
                     <span class="fa fa-user"></span>
                     <span class="nav-title">Compte</span>
                 </a>
