--- a/panier.html
+++ b/panier.html
@@ -134,13 +134,13 @@
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="./panier.html">
+                <a href="./panier.html" class="active">
                     <span class="fa fa-shopping-cart"></span>
                     <span class="nav-title">Panier</span>
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="./compte.html" class="active">
+                <a href="./compte.html" >
                     <span class="fa fa-user"></span>
                     <span class="nav-title">Compte</span>
                 </a>
