--- a/favoris.html
+++ b/favoris.html
@@ -128,7 +128,7 @@
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="./favoris.html">
+                <a href="./favoris.html" class="active">
                     <span class="fa fa-heart"></span>
                     <span class="nav-title">Favoris</span>
                 </a>
@@ -140,7 +140,7 @@
                 </a>
             </li>
             <li class="bottom-navigation-item">
-                <a href="./compte.html" class="active">
+                <a href="./compte.html" >
                     <span class="fa fa-user"></span>
                     <span class="nav-title">Compte</span>
                 </a>
