--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         </div>
         <div class="login-body">
             <h4>Connexion</h4>
-            <form action="#">
+            <form action="./index.html">
                 <div class="form-input">
                     <input type="text" name="phone" id="phone" placeholder="Numéro téléphone">
                 </div>
