add login and register page and maj of main.css

--- a/compte.html
+++ b/compte.html
@@ -80,7 +80,7 @@
                     <img src="./assets/img/users/profil.jpg" alt="profil">
                     <h4>Alex Rider</h4>
                     <h5>alexrider@test.local</h5>
-                    <form action="#">
+                    <form action="./login.html">
                         <button type="submit">Déconnexion</button>
                     </form>
                 </div>
