add panier  and maj of main.css

--- a/panier.html
+++ b/panier.html
@@ -99,10 +99,10 @@
                             </div>
                         </div>
                         <div class="basket-content-item">
-                            <img src="./assets/img/food/food2.jpg" alt="food">
+                            <img src="./assets/img/food/food3.jpg" alt="food">
                             <div class="content">
                                 <div class="item-detail">
-                                    <h4>Burger</h4>
+                                    <h4>Pizza</h4>
                                     <h5><span>Restaurant:</span><span>Le cosy</span></h5>
                                     <h5><span>Prix:</span><span>3500</span><span>XAF</span></h5>
                                 </div>
